# agentic_ai_mcp_demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  claude_mcp_config.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build_push_docker.yaml  continuous-deployment.yaml  terraform.yaml
src/: debug_server.py  main.py
src/app/: agent.py  config_env.py  streaming_agent.py
src/mcp_services/github/: __main__.py  schemas.py  server.py
